# flassh

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.travis/: install-libssh.sh
doc/: syntax-overview.md
src/: command.cpp  command.hpp  context.cpp  context.hpp  eventLoop.cpp  eventLoop.hpp  host.cpp  host.hpp  main.cpp  parser.cpp  parser.hpp  process.cpp  process.hpp
src/parser/: grammar.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  symbols.hpp  util.cpp  util.hpp
test/: run_tests.py  util.py
test/bash_compat/: all.sh  basic.sh  fail_escape.sh  fail_quote.sh  pipe.sh  quotes_escapes.sh  whitespace.sh
